--- a/swt/package.json
+++ b/swt/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "${swtpackagename}",
+  "name": "com.ashera.nestedscrollview.swt",
   "version": "1.0.0",
   "description": "NestedScrollView Plugin",
   "author": "Ashera",
