--- a/android/package.json
+++ b/android/package.json
@@ -2,6 +2,6 @@
   "name": "com.ashera.nestedscrollview",
   "version": "1.0.0",
   "description": "NestedScrollView Plugin",
-  "author": "Ashera",
-  "license": "ISC"
+  "author": "Ram M",
+  "license": "Apache-2.0"
 }
