--- a/ios/plugin.xml
+++ b/ios/plugin.xml
@@ -11,7 +11,7 @@
   
   <platform name="ios">
     <config-file target="config.xml" parent="/widget">
-      <feature name="com.ashera.nestedscrollview.ios">
+      <feature name="CordovaNestedScrollViewPlugin">
         	<param name="ios-package" value="CordovaNestedScrollViewPlugin" />
          	<param name="onload" value="true" />
       </feature>
