--- a/plugin.xml
+++ b/plugin.xml
@@ -31,7 +31,7 @@
   </platform>
   <platform name="ios">
     <config-file target="config.xml" parent="/widget">
-      <feature name="com.ashera.nestedscrollview.ios">
+      <feature name="CordovaNestedScrollViewPlugin">
         	<param name="ios-package" value="CordovaNestedScrollViewPlugin" />
          	<param name="onload" value="true" />
       </feature>
